Add a way how to list subscribed topics (#302)
* Add a way how to list subscribed topics


* fix test


* comments


* doc comments


* comments


* comments


* fix
